--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,31 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js"></script>  
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics.js"></script>   
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js"></script>    
+ 
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAy2ZdgyCXGN9Fx0BagRukC9Y11GhYsWdc",
+      authDomain: "todoapp-87a7e.firebaseapp.com",
+      projectId: "todoapp-87a7e",
+      storageBucket: "todoapp-87a7e.appspot.com",
+      messagingSenderId: "837767964315",
+      appId: "1:837767964315:web:30f84beadd1859d3cc083e",
+      measurementId: "G-EDF4BN0YRM"
+    };
+  
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+ </script>
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
